Sec7_Chap76-XXX: test code optimizations